# Sockserver_v2

./: readme.txt
client_v2/: CMakeLists.txt  client2.cpp
server_v2/: CMakeLists.txt  server2.cpp
